<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainBmiActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="456dp"
        android:layout_height="194dp"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/treadmill" />

    <TextView
        android:id="@+id/BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:gravity="center"
        android:text="@string/aboutapp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Weight"
        android:gravity="center"
        android:inputType="number" />


    <EditText

        android:id="@+id/HeightIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/HeightINC"
        android:inputType="number"
        android:gravity="center" />

    <EditText

        android:id="@+id/HeightFT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/HeightFT"
        android:inputType="number"
        android:gravity="center"/>

    <Button
        android:id="@+id/BtnCal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Calculate BMI" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Result"
        android:layout_marginTop="15dp"
        android:text="@string/Result"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#21AC26"/>


</LinearLayout>

